--- a/DevExMobileApp/DevExMobileApp/UI/AgendaPage.xaml
+++ b/DevExMobileApp/DevExMobileApp/UI/AgendaPage.xaml
@@ -1,4 +1,28 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="DevExMobileApp.UI.AgendaPage" Title="Agenda" NavigationPage.BackButtonTitle="Dashboard">
- 
+  <Grid>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
+    <Entry x:Name="Topic_Field" Placeholder="Topic" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" TextColor="#ffffff"></Entry>
+    <Picker x:Name="presenterPicker" Title="Do you wish to present this topic?" Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="3">
+      <Picker.Items>
+        <x:String>Yes</x:String>
+        <x:String>No</x:String>
+      </Picker.Items>
+    </Picker>
+    <Button x:Name="Register" Text="Submit" BackgroundColor="#ffffff" Grid.Row="4" Grid.Column="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Clicked="SubmitClicked" />
+  </Grid>
 </ContentPage>
