--- a/DevExMobileApp/DevExMobileApp/UI/MainPage.xaml
+++ b/DevExMobileApp/DevExMobileApp/UI/MainPage.xaml
@@ -1,39 +1,135 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DevExMobileApp.UI.MainPage" Title="DevEx" BackgroundImage="appback.jpg">
-  <StackLayout >
+             x:Class="DevExMobileApp.UI.MainPage" Title="DevEx"  BackgroundImage="appback.jpg">
 
-    <ActivityIndicator HorizontalOptions="Center" VerticalOptions="Center" x:Name="loader"
-                          WidthRequest='50'
-                          HeightRequest='50' IsRunning="true">
-    </ActivityIndicator>
-    <WebView x:Name="Browser" WidthRequest="1000" HeightRequest="1000" Navigating="webOnNavigating"
-      Navigated="webOnEndNavigating">
-      
-    </WebView>
-  </StackLayout>
+    <ContentPage.Resources>
+            <ResourceDictionary>
+                <!-- Colors -->
+                <Color x:Key="CIPrimaryColor">#1971af</Color>
+                <Color x:Key="CISecondaryColor">#FFCCCCCC</Color>
+                <Color x:Key="CITersiaryColor">#38abab</Color>
+
+                <Color x:Key="CIWhite">#ffffff</Color>
+
+                <!-- Labels -->
+                <Style x:Key="HeadingLabelStyle"
+                       TargetType="Label">
+                    <Setter Property="FontSize"
+                            Value="48" />
+                    <Setter Property="VerticalTextAlignment"
+                            Value="Center" />
+                    <Setter Property="HorizontalTextAlignment"
+                            Value="Center" />
+                    <Setter Property="LineBreakMode"
+                            Value="WordWrap" />
+                    <Setter Property="TextColor"
+                        Value="{StaticResource CIWhite}" />
+
+                </Style>
+
+                <Style x:Key="SubHeadingLabelStyle"
+                       TargetType="Label">
+                    <Setter Property="FontSize"
+                            Value="16" />
+                    <Setter Property="VerticalTextAlignment"
+                            Value="Center" />
+                    <Setter Property="HorizontalTextAlignment"
+                            Value="Center" />
+                </Style>
+
+                <!--Buttons-->
+                <Style x:Key="MenuStyle"
+                       TargetType="Button">
+                    <Setter Property="TextColor"
+                            Value="{StaticResource CIWhite}" />
+                    <Setter Property="BackgroundColor"
+                            Value="{StaticResource CIPrimaryColor}" />
+                    <Setter Property="HorizontalOptions"
+                            Value="Center" />
+                    <Setter Property="VerticalOptions"
+                            Value="CenterAndExpand" />
+                    <Setter Property="BorderRadius"
+                            Value="145" />
+                    <Setter Property="VerticalOptions"
+                            Value="FillAndExpand" />
+                    <Setter Property="HorizontalOptions"
+                            Value="FillAndExpand" />
+                <Setter Property="ContentLayout"
+                        Value="Top,-15" />
+            </Style>
+
+            </ResourceDictionary>
+    </ContentPage.Resources>
+    
+  
+
+    
+    
 
   <Grid  x:Name="gridDashboard">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="*"/>
-      <RowDefinition Height="*"/>
-      <RowDefinition Height="*"/>
-      <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="*" />
-      <ColumnDefinition Width="*" />
-    </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45*" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="120" />
+            <RowDefinition Height="120" />
+            <RowDefinition Height="45*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="120" />
+            <ColumnDefinition Width="120" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-    <Label x:Name="DevexHeading" Font = "28" Text="A PLACE WHERE WE XCHANGE IDEAS, EXPERIENCES, PRACTICES AND SOLUTIONS" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" LineBreakMode="WordWrap" Grid.ColumnSpan="2" Grid.RowSpan="2"></Label>
-    
-    <Button x:Name="Agenda" Text="Agenda" ContentLayout="Top,0" BackgroundColor="Transparent" Image="button.png"  HorizontalOptions="FillAndExpand" Grid.Row="2" Grid.Column="0" Clicked="AgendaClicked"/>
-    <Button x:Name="Register" BackgroundColor="Transparent" Image="button.png" VerticalOptions="FillAndExpand" Grid.Row="2" Grid.Column="1" Clicked="AttendanceClicked" />
-    <Button x:Name="Blogs" BackgroundColor="Transparent" Image="button.png" VerticalOptions="FillAndExpand" Grid.Row="3" Grid.Column="0" Clicked="BlogsClicked"/>
-    <Button x:Name="Topic" BackgroundColor="Transparent" Image="button.png" VerticalOptions="FillAndExpand" Grid.Row="3" Grid.Column="1" Clicked="SubmitClicked" />
-   
-    
+        <Label x:Name="DevexHeading1"
+               Text="DevEx"
+               Grid.Row="0"
+               Grid.ColumnSpan="4"
+               Grid.RowSpan="1"
+               Style="{StaticResource HeadingLabelStyle}"></Label>
+
+        <Label x:Name="DevexHeading"
+               Text="A PLACE WHERE WE XCHANGE IDEAS, EXPERIENCES, PRACTICES AND SOLUTIONS"
+               Grid.Row="2"
+               Grid.ColumnSpan="4"
+               Grid.RowSpan="1"
+               Style="{StaticResource SubHeadingLabelStyle}"></Label>
+
+        <Button x:Name="Agenda"
+                Grid.Row="3"
+                Grid.Column="1"
+                Text="Agenda"
+                Image="Agent.png"
+                Style="{StaticResource MenuStyle}"
+                Clicked="AgendaClicked">
+        </Button>
+        <Button x:Name="Register"
+                Grid.Row="3"
+                Grid.Column="2"
+                Text="QR Scanner"
+                Image="Register.png"
+                Style="{StaticResource MenuStyle}"
+                Clicked="AttendanceClicked" />
+        <Button x:Name="Blogs"
+                Grid.Row="4"
+                Grid.Column="1"
+                Text="Kudos"
+                Image="Blog.png"
+                Style="{StaticResource MenuStyle}"
+                Clicked="BlogsClicked"/>
+        <Button x:Name="Topic"
+                Grid.Row="4"
+                Grid.Column="2"
+                Text="Topic"
+                Image="Topic.png"
+                ContentLayout="Top,-15"
+                Style="{StaticResource MenuStyle}"
+                Clicked="SubmitClicked" />
+
+
+
   </Grid>
   
   
