--- a/DevExMobileApp/DevExMobileApp/UI/AgendaPage.xaml
+++ b/DevExMobileApp/DevExMobileApp/UI/AgendaPage.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="DevExMobileApp.UI.AgendaPage" Title="Agenda" NavigationPage.BackButtonTitle="Dashboard">
+  <ScrollView>
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="*"/>
@@ -10,19 +11,34 @@
       <RowDefinition Height="*"/>
       <RowDefinition Height="*"/>
       <RowDefinition Height="*"/>
+
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="*"/>
+      
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
       <ColumnDefinition Width="*" />
       <ColumnDefinition Width="*" />
     </Grid.ColumnDefinitions>
-    <Entry x:Name="Topic_Field" Placeholder="Topic" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" TextColor="#ffffff"></Entry>
-    <Picker x:Name="presenterPicker" Title="Do you wish to present this topic?" Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="3">
-      <Picker.Items>
-        <x:String>Yes</x:String>
-        <x:String>No</x:String>
-      </Picker.Items>
-    </Picker>
-    <Button x:Name="Register" Text="Submit" BackgroundColor="#ffffff" Grid.Row="4" Grid.Column="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Clicked="SubmitClicked" />
+    <ActivityIndicator x:Name="activityIndicator" IsRunning="True" Grid.Row="3" Grid.Column="1"></ActivityIndicator>
+    <Label Text="{Binding Agenda.Venue}" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalTextAlignment="Center"></Label>
+    <Label Text="{Binding Agenda.Time}" Grid.Row="1" Grid.Column="2"  HorizontalTextAlignment="Center"></Label>
+    <Image Source="{Binding Agenda.Sessions[0].Picture}" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="2"></Image>
+    <Label Text="{Binding Agenda.Sessions[0].Speaker}" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+    <Label Text="{Binding Agenda.Sessions[0].Topic}" Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+    <Label Text="{Binding Agenda.Sessions[0].Summary}" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+
+    <Image Source="{Binding Agenda.Sessions[1].Picture}" Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="2"></Image>
+    <Label Text="{Binding Agenda.Sessions[1].Speaker}" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+    <Label Text="{Binding Agenda.Sessions[1].Topic}" Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
+    <Label Text="{Binding Agenda.Sessions[1].Summary}" Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="3" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"></Label>
   </Grid>
+  </ScrollView>
 </ContentPage>
