--- a/DevExMobileApp/DevExMobileApp/UI/RewardsPage.xaml
+++ b/DevExMobileApp/DevExMobileApp/UI/RewardsPage.xaml
@@ -1,6 +1,79 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DevExMobileApp.UI.RewardsPage">
-<ProgressBar x:Name="progress" />
-</ContentPage>
+             x:Class="DevExMobileApp.UI.RewardsPage" BackgroundImage="appback.jpg">
+  
+    <StackLayout Orientation="Vertical"  Padding="20,20,20,20">
+      <Grid>
+        <Grid.RowDefinitions>
+          <RowDefinition Height="*"/>
+          <RowDefinition Height="*"/>
+          <RowDefinition Height="*"/>
+          <RowDefinition Height="*"/>
+          <RowDefinition Height="*"/>
+
+
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <ActivityIndicator x:Name="activityIndicator" IsRunning="True" Grid.Row="4" Grid.Column="1"></ActivityIndicator>
+        <BoxView Color="White" Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="3"/>
+        <Label Text="{Binding Name}" Grid.Row="1" Grid.Column="1"  HorizontalTextAlignment="Center"></Label>
+       
+
+        <Label Text="{Binding Reward.Kudos}" Grid.Row="2"  Grid.Column="0"  HorizontalTextAlignment="Center"></Label>
+        <Label Text="{Binding Reward.NoOfSessionsAttended}" Grid.Row="2"  Grid.Column="1"  HorizontalTextAlignment="Center"></Label>
+        <Label Text="{Binding Reward.NoOfSessionsPresented}" Grid.Row="2" Grid.Column="2"  HorizontalTextAlignment="Center"></Label>
+        <Label Text="Kudos" Grid.Row="3"  Grid.Column="0"  HorizontalTextAlignment="Center"></Label>
+        <Label Text="Attended" Grid.Row="3"  Grid.Column="1"  HorizontalTextAlignment="Center"></Label>
+        <Label Text="Presented" Grid.Row="3" Grid.Column="2"  HorizontalTextAlignment="Center"></Label>
+
+
+      </Grid>
+
+
+      <ListView x:Name="listView" RowHeight="100" ItemTapped="Handle_ItemTapped"
+              ItemSelected="Handle_ItemSelected"  BackgroundColor="Transparent"
+                 SeparatorVisibility="None">
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <ViewCell>
+              <Grid BackgroundColor="White" Margin="0,0,0,5" >
+                <Grid.RowDefinitions>
+                  <RowDefinition Height="*" />
+                  <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                  <ColumnDefinition Width="*" />
+                  <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Image Source="{Binding Picture}" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"></Image>
+                <StackLayout Grid.Column="1" Grid.Row="0">
+                  <Label Text="{Binding Product}"
+                         VerticalTextAlignment="Center" HorizontalTextAlignment="Start"
+                         LineBreakMode="TailTruncation"
+                         FontSize="10" TextColor="Red"/>
+                  <Label Text="{Binding Description}"
+                         VerticalTextAlignment="Start"  HorizontalTextAlignment="Start"
+                         LineBreakMode="WordWrap"
+                         FontSize="8"/>
+                </StackLayout>
+                
+                <Label Text="{Binding Price}" Grid.Column="1" Grid.Row="1"
+                       VerticalTextAlignment="Center"  HorizontalTextAlignment="Start"
+                       LineBreakMode="TailTruncation"
+                       FontSize="14" TextColor="Red"/>
+
+              </Grid>
+            </ViewCell>
+          </DataTemplate>
+        </ListView.ItemTemplate>
+      </ListView>
+    </StackLayout>
+
+ 
+  </ContentPage>
